@@ -122,6 +122,9 @@ protected:
 	void setDoubleBuffer(bool b);
 	bool doubleBuffer();
 
+	void setUseSlices(bool b);
+	bool useSlices();
+
 	void setAmplification(int n);
 	int amplification();
 
